recursion.lessons.recursion.tree.Tree.scala.error
Tree:5: error: not enough arguments for method current: (v: Int)Unit.
Unspecified value parameter v.
	println(current());
                       ^